--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,6 +44,7 @@
         "system_error": "cpp",
         "type_traits": "cpp",
         "cstdlib": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "sstream": "cpp"
     }
 }
