--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,5 +46,6 @@
         "cstdlib": "cpp",
         "unordered_set": "cpp",
         "sstream": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "Disabled"
 }
